http/tests/workers/service/service-worker-download.https.html times out with async policy delegates https://bugs.webkit.org/show_bug.cgi?id=183479

Reviewed by Youenn Fablet.

Source/WebKit:

Ensure that ServiceWorkerFetchClient::m_isCheckingResponse is set before code that depends on it
executes. This bit was set by code that's posted to the runloop using 'callOnMainThread' in
ServiceWorkerFetchClient::didReceiveResponse. But when didReceiveResponse is executing, tasks for
handling didReceiveData, didFail, or didFinish may already have been posted to the runloop, and in
that case would execute before m_isCheckingResponse gets set, and then incorrectly fail to
early-out. Fix this by directly setting m_isCheckingResponse in didReceiveResponse.

* WebProcess/Storage/ServiceWorkerClientFetch.cpp:
(WebKit::ServiceWorkerClientFetch::start):
(WebKit::ServiceWorkerClientFetch::didReceiveResponse):

LayoutTests:

Add layout test coverage.

* http/tests/workers/service/service-worker-download-async-delegates.https-expected.txt: Added.
* http/tests/workers/service/service-worker-download-async-delegates.https.html: Added.


Canonical link: https://commits.webkit.org/199246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229558 268f45cc-cd09-0410-ab3c-d52691b4dbfc